Syntax fixes