@@ -15,7 +15,8 @@ public class DashboardInteractor implements DashboardInputBoundary {
     private final GetWatchedListDataAccessInterface watchedListDataAccess;
     private final DashboardOutputBoundary dashboardPresenter;
 
-    public DashboardInteractor(GetWatchedListDataAccessInterface watchedListDataAccess, DashboardOutputBoundary dashboardPresenter) {
+    public DashboardInteractor(GetWatchedListDataAccessInterface watchedListDataAccess,
+                               DashboardOutputBoundary dashboardPresenter) {
         this.watchedListDataAccess = watchedListDataAccess;
         this.dashboardPresenter = dashboardPresenter;
     }
@@ -24,18 +25,15 @@ public class DashboardInteractor implements DashboardInputBoundary {
     public void execute(DashboardInputData inputData) {
         String username = inputData.getUsername();
 
-        // Fetch the watched list for the user
         MovieList watchedList = watchedListDataAccess.getWatchedList(username);
         List<Movie> movies = watchedList.getMovieList();
 
-        // Aggregate metrics
         double totalHoursWatched = calculateTotalHoursWatched(movies);
         Map<String, Integer> favoriteGenres = calculateFavoriteGenres(movies);
         double averageRating = calculateAverageRating(movies);
         Map<String, Double> highestRatedGenres = calculateHighestRatedGenres(movies);
         List<String> longestMovies = findLongestMovies(movies);
 
-        // Create output data
         DashboardOutputData outputData = new DashboardOutputData(
                 totalHoursWatched,
                 favoriteGenres,
@@ -45,7 +43,6 @@ public class DashboardInteractor implements DashboardInputBoundary {
                 username
         );
 
-        // Pass the data to the presenter
         dashboardPresenter.prepareSuccessView(outputData);
     }
 
@@ -65,7 +62,7 @@ public class DashboardInteractor implements DashboardInputBoundary {
     private double calculateTotalHoursWatched(List<Movie> movies) {
         return movies.stream()
                 .mapToDouble(Movie::getRuntime)
-                .sum() / 60.0; // Convert minutes to hours
+                .sum() / 60.0;
     }
 
     private Map<String, Integer> calculateFavoriteGenres(List<Movie> movies) {
@@ -110,6 +107,6 @@ public class DashboardInteractor implements DashboardInputBoundary {
                 .sorted(Comparator.comparing(Movie::getRuntime).reversed())
                 .limit(5) // Get top 5 longest movies
                 .map(Movie::getTitle)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
